--- a/styles/product-main.css
+++ b/styles/product-main.css
@@ -105,10 +105,11 @@ aside h2 {
     main {
         grid-area: main;
         display: flex;
+        justify-content: center;
         flex-grow: 1;
         width: 100%;
         height: 100%;
-        padding: 1em;
+        padding: 1em 0;
     }
 
     aside {
@@ -116,7 +117,12 @@ aside h2 {
     }
 
     .jacket-wrapper {
-        width: 300px;
-        margin: 0 auto;
+        flex-basis: 250px;
+        margin: 1em 0;
     }
+
+    .product-summary {
+        padding: 0 1em;
+    }
+
 }
